2009-04-03 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* queryParser.y
	[ 2141249 ] WQL parser needs to suppor the LIKE syntax
	(fix error/warning from previous patch

2009-03-31  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c, cimcClientSfcbLocal.c
	Fixed [ 2708675 ] unused function definition in providerDrv.c
	(fix by Surendra Kodali)

2009-03-25  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c, cimXmlOps.y:
	Fixed [ 2591758 ] EOF Exception when running DefineSystem
	Reversed orignal "fix"; issue was an XML parsing problem
	
2009-03-24 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* control.c, control.h, httpAdapter.c
	Fixed [ 2172888 ] http content-length is not constrained
	(revised; based in part on patch from J. Bart Whitely)

2009-03-23 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerMgr.c, providerDrv.c:
	Fixed [ 2705902 ] Deallocating NULL response headers
	(based on patch from Pratayusa)

2009-03-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* queryLexer.l, queryOperation.c, queryOperation.h, queryParser.y
	  test/unittest/EmbeddedTests.c, test/unittest/Makefile.am:
	Fixed [ 2141249 ] WQL parser needs to suppor the LIKE syntax
		(patch from Shashi Uli)

2009-03-19  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimslpCMPI.c:
	Fixed [ 2692030 ] sfcb's SLP client should use LocalConnect interface

2009-03-16  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerMgr.c:
	Fixed [ 2688353 ] Unnecessary condition in providerMgr.c
	(based on patch from Pratyusha Doddapaneni)
	
2009-03-13 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/xmltest/associatorNames.OK test/xmltest/enumerateQualifiers.OK
	  test/xmltest/getQualifier.OK:
	Fixed tests for [ 2591758 ] EOF Exception when running DefineSystem

2009-03-12  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	Fixed [ 2591758 ] EOF Exception when running DefineSystem
