@@ -468,11 +468,12 @@ static UtilHashTable *gatherNameSpaces(char *dn, UtilHashTable *ns, int first)
      closedir(dir_test);
      cr=newClassRegister(n);
      if (cr) {
-       ns->ft->put(ns, n+nsBaseLen, cr);
+       char *name = (char*)malloc(strlen(n+nsBaseLen)+1);
+       strncpy(name, n+nsBaseLen, strlen(n+nsBaseLen));
+       ns->ft->put(ns, name, cr);
        gatherNameSpaces(n,ns,0);
-     } else {
-        free(n);
      }
+     free(n);
    }
    else if (first) {
       mlogf(M_ERROR,M_SHOW,"--- Repository %s not found\n",dn);
