@@ -19,6 +19,7 @@ Bugs fixed:
 - 2705902 Deallocating NULL response headers
 - 2172888 http content-length is not constrained (revised)
 - 2708675 unused function definition in providerDrv.c
+- 2727841 Memory Leak is in gatherNameSpaces in classProvider
 
 Changes in 1.3.3
 ================
